--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,4 +10,8 @@
 
 <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <script src="https://unpkg.com/htmx.org@1.5.0"></script>
+<script src="/app.js" defer></script>
+<link rel="stylesheet" href="/styles.css">
 </head>
+
+<%- include('../partials/nav') %>
